fix minor layout issues

--- a/templates/siegeengine2/css/app.css
+++ b/templates/siegeengine2/css/app.css
@@ -82,24 +82,29 @@ iframe {
   .item-101 {
     display: none !important;
   }
+
+  /* line 58, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  .restyling {
+    margin-top: 50px;
+  }
 }
 @media only screen and (max-width: 1000px) {
-  /* line 60, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 61, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .article-body {
     padding: 0 9%;
   }
 
-  /* line 61, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 62, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .chi-siamo {
     margin: 0 -3%;
   }
 
-  /* line 62, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 63, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .tablets {
     padding: 0 3%;
   }
 
-  /* line 63, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 64, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .siti-web {
     margin: 0 -3%;
   }
@@ -108,126 +113,131 @@ iframe {
   /* .grafica { padding: 0 2%; } */
 }
 @media only screen and (min-width: 768px) {
-  /* line 72, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 73, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .large-3 {
     width: 20%;
   }
 
-  /* line 73, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 74, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .large-9 {
     width: 80%;
   }
 
-  /* line 74, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 75, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar {
     background: none;
   }
 
-  /* line 76, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 77, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar-section ul li {
     padding: 1px;
   }
-  /* line 77, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 78, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar-section li a:not(.button) {
     padding: 0 8px;
   }
 
-  /* line 79, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 80, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .item-101 {
     display: list-item;
   }
 
-  /* line 80, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 81, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar .title-area {
     float: none;
   }
 
-  /* line 81, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 82, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .uomo-narrow {
     display: none;
   }
 
-  /* line 82, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 83, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .uomo-wide {
     display: inline-block;
   }
 
-  /* line 83, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 84, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .sidebar {
     margin-top: 48px;
   }
 
-  /* line 84, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 85, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .art-content-layout-wrapper {
     /* margin-right: 15px; margin-left: 60px; */
     margin-right: 0px;
     margin-left: 42px;
   }
 
-  /* line 88, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 89, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .art-content-layout-wrapper-servizi {
     margin-right: 15px;
     margin-left: 60px;
   }
 
-  /* line 92, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 93, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .buffer {
     min-height: 150px;
   }
 
-  /* line 93, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 94, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .first {
     margin-top: 100px;
   }
 
-  /* line 94, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 95, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .first2 {
     margin-top: 200px;
   }
 
-  /* line 95, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 96, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .split {
     margin-right: 26px;
     margin-left: 68px;
   }
 
-  /* line 96, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 97, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .split2 {
     margin-right: 15px;
     margin-left: 60px;
   }
 
-  /* line 97, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 98, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   #footer {
     margin-top: 0px;
   }
 
-  /* line 98, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 99, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   #dispositivi {
     padding-right: 20px;
+  }
+
+  /* line 100, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  #software {
+    text-align: right;
   }
 }
 @media only screen and (min-width: 940px) {
   /* .top-bar{ background: none; } */
-  /* line 103, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 105, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar-section {
     margin-left: -23px;
     /* ul li { padding: 1px; } */
   }
-  /* line 105, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 107, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .top-bar-section li a:not(.button) {
     background: #f7931e;
     padding: 0 14px;
   }
 
   /* .sidebar { margin-top: 48px; } */
-  /* line 112, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 114, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   #teddynethome_hype_container {
     margin-left: 100px;
     width: 100%;
   }
 
-  /* line 115, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
+  /* line 117, ../sass/ruby/1.9.1/gems/zurb-foundation-4.3.2/scss/app.scss */
   .item-101 {
     display: list-item;
   }
